src/examples/invalid/dynamic/array-mat-index.ra
func main(): void {
  a = declare_arr<int>(3, 2);
  a[3][4] = 2;
  print(a[3][4]);
}
